Long overdue update of Maven resources.